logs/6158771.out
==========================================
SLURM_JOB_ID = 6158771
SLURM_JOB_NODELIST = d05-14
TMPDIR = /tmp/SLURM_6158771
==========================================
  File "source/pprabhu_driver.py", line 97
    'momentum': 0.9,
    ^
SyntaxError: invalid syntax
